--- a/web/index.html
+++ b/web/index.html
@@ -41,13 +41,13 @@
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     var firebaseConfig = {
-      apiKey: "AIzaSyCt5Zbr2CYSF_pB6hrs4OXDLPARAm56Agg",
-      authDomain: "automics-d6c2d.firebaseapp.com",
-      projectId: "automics-d6c2d",
-      storageBucket: "automics-d6c2d.appspot.com",
+      apiKey: "ChaveAPI",
+      authDomain: "dadosAPI",
+      projectId: "dadosAPI",
+      storageBucket: "dadosAPI",
       messagingSenderId: "789762859640",
-      appId: "1:789762859640:web:7e4b5b5dd025c5be6f838d",
-      measurementId: "G-JHPTGV5QN9"
+      appId: "dadosAPI",
+      measurementId: "dadosAPI"
     };
   
     // Initialize Firebase
